--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
@@ -16,10 +13,6 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +28,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+.table-container {
+  margin: 25px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 70%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.pagination-container {
+  margin: 30px;
+}
+.page-numbers, .chevron {
+  margin: 10px;
+  padding: 10px;
+  cursor: pointer;
+}
+a:hover, .page-numbers:hover {
+  background-color: #0059A4;
+  columns: #dddddd;
+  border-radius: 50%;
+}
+.highligted-page {
+  background-color: #0059A4;
+  color: #dddddd;
+  border-radius: 50%;
+}
+.disabled {
+  pointer-events: none;
+  color: #8e8f93;
 }
